Add fast validator/rich validator numbers